before merge